--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,29 @@ img {
 body {
   font-family: 'Courier New', Courier, monospace;
   height: 100vh;
+  background-image: radial-gradient(circle, white, gold);
+}
+
+header {
+  border-bottom: 2px solid black;
+  background-color: white;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+
+.nav {
+  display: none;
+}
+
+ul {
+  list-style-type: none;
+}
+
+main {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: radial-gradient(circle, white, gold);
+  padding: 1rem;
 }
 
 figure {
@@ -47,7 +66,13 @@ figure {
 a {
   width: min(360px, 100%);
   text-decoration: none;
+  font-weight: bold;
   color: hsl(0, 0%, 0%);
+  transition: 0.4s;
+}
+
+li a:hover {
+  color: rebeccapurple;
 }
 
 a:hover {
@@ -55,9 +80,44 @@ a:hover {
   opacity: 0.6;
 }
 
-@media screen and (max-width: 576px)
+.mobile-nav {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.bar {
+  width: 30px;
+  height: 3px;
+  background-color: black;
+  margin: 3.5px 0;
+  transition: transform 0.3s ease;
+}
+
+.hamburger-menu {
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 769px)
 {
   body {
-    padding: 1rem;
+    background-image: radial-gradient(circle, white, rebeccapurple);
+  }
+
+  .nav {
+    display: block;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .mobile-nav {
+    display: none;
+  }
+
+  .text h3 {
+    font-weight: bolder;
+    font-size: 1.5rem;
   }
 }
